--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="flex shadow-lg bg-white px-20 items-center sticky top-0 z-[100] w-full py-3">
-        <h1 class="text-2xl font-bold pr-10">Perumahan</h1>
+        <h1 class="text-2xl font-bold pr-10">Perumahan S</h1>
         <div id="hamburger" class="flex flex-col mt-1 gap-1 cursor-pointer lg:hidden absolute right-0 mr-20">
             <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out origin-top-left "></span>
             <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out"></span>
@@ -68,6 +68,7 @@
                 <div id="left-gambar"
                     class="absolute hidden z-[99]  left-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
                     &lt;</div>
+
                 <div class="flex-shrink-0 ">
                     <img class="rounded-lg w-52 h-36" src="./img/rumah1.jpg" alt="rumah">
                     <div class="ml-2">
