perubahan pada bagian div img

--- a/index.html
+++ b/index.html
@@ -69,19 +69,44 @@
                 &lt;
                 </div>
                 <div class="flex-shrink-0 ">
-                    <img class="w-52 h-36" src="./img/rumah1.jpg" alt="gambar">
+                    <img class="rounded-lg w-52 h-36" src="./img/rumah1.jpg" alt="gambar">
+                    <div class="ml-2">
+                        <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
+                        <p>Tipe 30</p>
+                        <p class="font-light text-xs">Majalaya</p>
+                    </div>
                 </div>
                 <div class="flex-shrink-0 ">
-                    <img class="w-52 h-36" src="./img/rumah2.jpg" alt="gambar">
+                    <img class="rounded-lg w-52 h-36" src="./img/rumah2.jpg" alt="gambar">
+                    <div class="ml-2">
+                        <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
+                        <p>Tipe 30</p>
+                        <p class="font-light text-xs">Majalaya</p>
+                    </div>
                 </div>
                 <div class="flex-shrink-0 ">
-                    <img class="w-52 h-36" src="./img/rumah3.jpg" alt="gambar">
+                    <img class="rounded-lg w-52 h-36" src="./img/rumah3.jpg" alt="gambar">
+                    <div class="ml-2">
+                        <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
+                        <p>Tipe 30</p>
+                        <p class="font-light text-xs">Majalaya</p>
+                    </div>
                 </div>
                 <div class="flex-shrink-0 ">
-                    <img class="w-52 h-36" src="./img/rumah4.jpg" alt="gambar">
+                    <img class="rounded-lg w-52 h-36" src="./img/rumah4.jpg" alt="gambar">
+                    <div class="ml-2">
+                        <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
+                        <p>Tipe 30</p>
+                        <p class="font-light text-xs">Majalaya</p>
+                    </div>
                 </div>
                 <div class="flex-shrink-0 ">
-                    <img class="w-52 h-36" src="./img/rumah5.jpg" alt="gambar">
+                    <img class="rounded-lg w-52 h-36" src="./img/rumah5.jpg" alt="gambar">
+                    <div class="ml-2">
+                        <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
+                        <p>Tipe 30</p>
+                        <p class="font-light text-xs">Majalaya</p>
+                    </div>
                 </div>
                 <div id="right-gambar"
                     class="absolute z-[99]  right-5 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-70 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
