--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div class="grid justify-center py-10  bg-[#AFD3E2]">
+    <div class="grid justify-center py-10 bg-[#AFD3E2]">
         <h1 class="text-center text-slate-700 mb-2 font-semibold">Jual Beli Rumah</h1>
         <div class="bg-[#19A7CE] rounded-md px-8 py-5 grid justify-items-center gap-4">
             <ul class="flex gap-5 text-white font-bold">
@@ -62,47 +62,46 @@
     <div class="grid justify-center py-10 bg-slate-200">
         <div>
             <h1 class="text-center font-semibold mb-5">Rekomendasi Rumah</h1>
-            <div class=" m-10">
-                <div id="content-gambar"
-                    class="flex px-5 overflow-x-auto no-scrollbar gap-x-5 w-full scroll-smooth ">
+            <div class="w-80">
+                <div id="content-gambar" class="flex w-full overflow-x-auto no-scrollbar gap-x-5  scroll-smooth">
                     <div id="left-gambar"
-                        class="absolute hidden z-[99]  left-5 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
-                        &lt;
-                    </div>
-                    <div class="flex-shrink-0 ">
-                        <img class="rounded-lg w-52 h-36" src="./img/rumah1.jpg" alt="gambar">
+                        class="absolute hidden z-[99]  left-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
+                        &lt;</div>
+
+                    <div class="flex-shrink-0">
+                        <img class="rounded-lg w-52 h-36" src="./img/rumah1.jpg" alt="rumah">
                         <div class="ml-2">
                             <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
                             <p>Tipe 30</p>
                             <p class="font-light text-xs">Majalaya</p>
                         </div>
                     </div>
-                    <div class="flex-shrink-0 ">
-                        <img class="rounded-lg w-52 h-36" src="./img/rumah2.jpg" alt="gambar">
+                    <div class="flex-shrink-0">
+                        <img class="rounded-lg w-52 h-36" src="./img/rumah2.jpg" alt="rumah">
                         <div class="ml-2">
                             <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
                             <p>Tipe 30</p>
                             <p class="font-light text-xs">Majalaya</p>
                         </div>
                     </div>
-                    <div class="flex-shrink-0 ">
-                        <img class="rounded-lg w-52 h-36" src="./img/rumah3.jpg" alt="gambar">
+                    <div class="flex-shrink-0">
+                        <img class="rounded-lg w-52 h-36" src="./img/rumah3.jpg" alt="rumah">
                         <div class="ml-2">
                             <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
                             <p>Tipe 30</p>
                             <p class="font-light text-xs">Majalaya</p>
                         </div>
                     </div>
-                    <div class="flex-shrink-0 ">
-                        <img class="rounded-lg w-52 h-36" src="./img/rumah4.jpg" alt="gambar">
+                    <div class="flex-shrink-0">
+                        <img class="rounded-lg w-52 h-36" src="./img/rumah4.jpg" alt="rumah">
                         <div class="ml-2">
                             <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
                             <p>Tipe 30</p>
                             <p class="font-light text-xs">Majalaya</p>
                         </div>
                     </div>
-                    <div class="flex-shrink-0 ">
-                        <img class="rounded-lg w-52 h-36" src="./img/rumah5.jpg" alt="gambar">
+                    <div class="flex-shrink-0">
+                        <img class="rounded-lg w-52 h-36" src="./img/rumah5.jpg" alt="rumah">
                         <div class="ml-2">
                             <p class="text-blue-900 font-semibold">Rp 157 Juta</p>
                             <p>Tipe 30</p>
@@ -110,9 +109,8 @@
                         </div>
                     </div>
                     <div id="right-gambar"
-                        class="absolute z-[99]  right-5 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-70 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
-                        &gt;
-                    </div>
+                        class="absolute z-[99]  right-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-70 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
+                        &gt;</div>
                 </div>
             </div>
         </div>
