--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="grid justify-center py-10 bg-slate-200">
         <div>
             <h1 class="text-center font-semibold mb-5">Rekomendasi Rumah</h1>
-            <div class="w-80">
+            <div class="w-72 mx-5">
                 <div id="content-gambar" class="flex w-full overflow-x-auto no-scrollbar gap-x-5  scroll-smooth">
                     <div id="left-gambar"
                         class="absolute hidden z-[99]  left-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
