--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out origin-bottom-left"></span>
         </div>
         <div id="list-nav"
-            class="navnull absolute z-50 left-0 mt-40 lg:mt-0 w-full  bg-white text-center lg:static lg:flex lg:opacity-100 lg:visible border-b-2 shadow-xl lg:shadow-none lg:border-b-0">
+            class="navnull absolute z-50 left-0 mt-48 lg:mt-0 w-full  bg-white text-center lg:static lg:flex lg:opacity-100 lg:visible border-b-2 shadow-xl lg:shadow-none lg:border-b-0">
             <ul class="lg:mr-10 lg:gap-x-10 lg:flex ">
                 <li>
                     <a href="#"
@@ -36,6 +36,12 @@
                     <a href="#"
                         class="text-xl hover:bg-[#E4DCCF] hover:text-slate-900 2xl:text-6xl lg:hover:border-b-4  px-2 py-1  block transition-all active:scale-95 active:opacity-80 lg:hover:bg-inherit lg:hover:text-white">
                         Contact
+                    </a>
+                </li>
+                <li>
+                    <a href="./pages/login.html"
+                        class="text-xl hover:bg-[#E4DCCF] hover:text-slate-900 2xl:text-6xl lg:hover:border-b-4  px-2 py-1  block transition-all active:scale-95 active:opacity-80 lg:hover:bg-inherit lg:hover:text-white">
+                        Login/Register
                     </a>
                 </li>
             </ul>
@@ -65,7 +71,7 @@
             <div class="w-72 mx-5">
                 <div id="content-gambar" class="flex w-full overflow-x-auto no-scrollbar gap-x-5  scroll-smooth">
                     <div id="left-gambar"
-                        class="absolute hidden z-[99]  left-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
+                        class="absolute hidden z-[99]  left-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950 select-none" >
                         &lt;</div>
 
                     <div class="flex-shrink-0">
@@ -109,12 +115,15 @@
                         </div>
                     </div>
                     <div id="right-gambar"
-                        class="absolute z-[99]  right-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-70 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950">
+                        class="absolute z-[99]  right-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-70 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950 select-none">
                         &gt;</div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
 
     <script src="js.js"></script>
 </body>
