--- a/index.html
+++ b/index.html
@@ -11,73 +11,74 @@
 </head>
 
 <body class="bg-white">
-    <!-- nav strt -->
-    <nav class="flex sticky top-0 z-[100] bg-white shadow-lg px-5 w-full py-3 items-center">
-        <div class="flex items-center gap-2">
-            <img class="w-10" src="./img/PERUMAHAN__1_-removebg-preview.png" alt="icon">
-            <h1 class="font-bold text-xl text-blue-950">Perumahan</h1>
-        </div>
-        <div id="hamburger" class="flex flex-col mt-1 gap-1 cursor-pointer lg:hidden absolute right-0 mr-12">
-            <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out origin-top-left "></span>
-            <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out"></span>
-            <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out origin-bottom-left"></span>
-        </div>
-        <div id="list-nav"
-            class="navnull absolute z-50 left-0 mt-[13rem] lg:mt-0 w-full  bg-white text-center lg:static lg:flex lg:opacity-100 lg:visible border-b-2 shadow-xl lg:shadow-none lg:border-b-0">
-            <ul class="lg:mr-10 lg:gap-x-10 lg:flex ">
-                <li>
-                    <a href="#"
-                        class="text-lg text-white lg:border-b-4 lg:border-[#EA5455] px-2 py-1 block bg-blue-950 lg:bg-inherit 2xl:text-6xl">
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="text-lg 2xl:text-6xl hover:bg-[#E4DCCF] hover:text-slate-900 lg:hover:border-b-4  px-2 py-1  block transition-all active:scale-95 active:opacity-80 lg:hover:bg-inherit lg:hover:text-white">
-                        About
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="text-lg hover:bg-[#E4DCCF] hover:text-slate-900 2xl:text-6xl lg:hover:border-b-4  px-2 py-1  block transition-all active:scale-95 active:opacity-80 lg:hover:bg-inherit lg:hover:text-white">
-                        Contact
-                    </a>
-                </li>
-                <li>
-                    <a href="./pages/login.html"
-                        class="text-lg hover:bg-[#E4DCCF] hover:text-slate-900 2xl:text-6xl lg:hover:border-b-4  px-2 py-1  block transition-all active:scale-95 active:opacity-80 lg:hover:bg-inherit lg:hover:text-white">
-                        Login/Register
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- nav end -->
 
-    <!-- sect 1 s -->
-    <div class="grid justify-center py-10 bg-[#AFD3E2]">
-        <h1 class="text-center text-slate-700 mb-2 font-semibold">Jual Beli Rumah</h1>
-        <div class="bg-[#19A7CE] rounded-md px-8 py-5 grid justify-items-center gap-4">
-            <ul class="flex gap-5 text-white font-bold">
-                <li><a href="#" class="border-b-2 px-2">Di Jual</a></li>
-                <li><a href="#" class="px-2">Di Sewa</a></li>
-            </ul>
-            <div class="w-52">
-                <div class="relative h-10 w-full min-w-[200px]">
-                    <input type="search"
-                        class="w-full duration-[50ms] rounded-[7px] bg-white px-3 py-2.5 border-2 border-transparent text-sm outline outline-0 focus:border-2 focus:border-blue-900 focus:outline-0"
-                        placeholder="Cari Daerah Rumah" />
+    <div class="h-96 w-full bg-bottom bg-cover bg-no-repeat grid place-items-center bg-[url('../img/pexels-expect-best-323780.jpg')]">
+        <div class="bg-transparent fixed top-0 z-[500] w-full  flex md:justify-center">
+            <nav class="bg-white/30 backdrop-blur-lg w-full  flex px-4 py-2 md:justify-evenly md:gap-5">
+                <div class="flex items-center gap-2 ">
+                    <img class="w-10" src="./img/PERUMAHAN__1_-removebg-preview.png" alt="icon">
+                    <h1 class="font-bold text-xl text-blue-950">Perumahan</h1>
                 </div>
+                <div id="hamburger" class="flex flex-col mt-3 gap-1 cursor-pointer md:hidden absolute right-0 mr-12">
+                    <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out origin-top-left "></span>
+                    <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out"></span>
+                    <span class="w-6 h-[3px] bg-black transition duration-300 ease-in-out origin-bottom-left"></span>
+                </div>
+                <div id="list-nav"
+                    class="navnull absolute z-[500] left-0 mt-12 md:mt-0 w-full md:w-auto  bg-white/80 text-center md:static md:flex md:opacity-100 md:bg-transparent md:backdrop-blur-none md:visible md:shadow-none md:border-b-0 ">
+                    <ul class="md:gap-x-10 md:flex md:items-center">
+                        <li>
+                            <a href="#"
+                                class="text-lg bg-blue-950 text-white md:border-b-4 md:border-[#EA5455] font-semibold px-2 py-1 block 2xl:text-6xl md:bg-transparent md:text-blue-950">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                class="text-lg 2xl:text-6xl hover:bg-[#E4DCCF] hover:text-slate-900 md:hover:border-b-4 md:hover:border-[#E4DCCF] md:hover:text-blue-950 px-2 py-1 block transition-all active:scale-95 active:opacity-80 md:hover:bg-inherit text-blue-950 font-semibold md:border-b-4 md:border-transparent">
+                                About
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"
+                                class="text-lg 2xl:text-6xl hover:bg-[#E4DCCF] hover:text-slate-900 md:hover:border-b-4 md:hover:border-[#E4DCCF] md:hover:text-blue-950 px-2 py-1 block transition-all active:scale-95 active:opacity-80 md:hover:bg-inherit text-blue-950 font-semibold md:border-b-4 md:border-transparent">
+                                Contact
+                            </a>
+                        </li>
+                        <li>
+                            <a href="./pages/login.html"
+                                class="text-lg 2xl:text-6xl hover:bg-[#E4DCCF] hover:text-slate-900 md:hover:border-b-4  px-2 py-1  block transition-all active:scale-95 active:opacity-80 md:hover:bg-inherit text-blue-950 font-semibold md:border-b-4 md:border-transparent  md:hidden">
+                                Login/Register
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="flex items-center">
+                    <a href="./pages/login.html" class="hidden md:block text-white px-3 py-1 bg-blue-950 rounded-md duration-200 hover:opacity-80 active:opacity-100 active:scale-105 ">Login</a>
+                </div>
+            </nav>
+        </div>
+
+        <div class="bg-white/30 backdrop-blur-lg text-white px-5 py-3 mt-10  rounded-md grid place-items-center ">
+            <h1 class="font-bold text-blue-950 my-2">Cari Rumah</h1>
+            <div class="flex gap-5 mb-2">
+                <p class="border-b-4 border-red-500">Jual Rumah</p>
+                <p>Sewa Rumah</p>
+            </div>
+            <div class="mb-5">
+                <input class="rounded-md px-3 py-1 focus:outline-none text-black border-2 border-transparent duration-150 focus:border-blue-950" type="search" placeholder="Example: Bekasi">
             </div>
         </div>
-    </div>
-    <!-- sect 1 e -->
 
-    <!-- sect 2 s -->
-    <div class="grid justify-center py-10 bg-slate-200">
+
+    </div>
+
+
+    <!-- sect 2 rekomen rumah s -->
+    <div class="grid justify-center px-1 py-10 bg-slate-200">
         <div>
             <h1 class="text-center font-semibold mb-5">Rekomendasi Rumah</h1>
-            <div class="w-64 px-5 ">
+            <div class="w-full grid justify-center ">
                 <div id="content-gambar" class="flex w-full overflow-x-auto no-scrollbar gap-x-5 snap-mandatory snap-x scroll-smooth">
                     <div id="left-gambar"
                         class="absolute hidden z-[99]  left-12 self-center bg-blue-800 px-4 py-2 text-white  font-semibold cursor-pointer opacity-75 text-lg rounded-full transition-all hover:opacity-100 active:bg-blue-950 select-none" >
